double sided exchange complete